[gd_scene load_steps=11 format=3 uid="uid://c8mhb22bae1my"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screens/dashboard/dashboard.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c51vyn54bk7q4" path="res://src/ui-components/calendar/calendar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dq4dr3oe20mb8" path="res://src/ui-components/player-list/player_list.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://i4nnwgwck615" path="res://src/ui-components/formation/formation.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dcv0qm4k1wi4q" path="res://src/ui-components/email/email.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://c7bh7ukttbkvu" path="res://src/ui-components/table/table.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://cbijtmv151qg7" path="res://src/ui-components/transfers/player-offer/player_offer.tscn" id="8"]
[ext_resource type="PackedScene" path="res://src/ui-components/transfers/contract-offer/contract_offer.tscn" id="9"]
[ext_resource type="PackedScene" path="res://src/ui-components/tranining/training.tscn" id="10"]

[node name="Dashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TopBar" type="HBoxContainer" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ManagerName" type="Label" parent="Main/VBoxContainer/TopBar"]
layout_mode = 2
text = "Hans Viustel"

[node name="TeamName" type="Label" parent="Main/VBoxContainer/TopBar"]
layout_mode = 2
text = "Barcellona"

[node name="Budget" type="Label" parent="Main/VBoxContainer/TopBar"]
layout_mode = 2
text = "400.000 $"

[node name="VSeparator" type="VSeparator" parent="Main/VBoxContainer/TopBar"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Date" type="Label" parent="Main/VBoxContainer/TopBar"]
layout_mode = 2
text = "24/08/2002"

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Content" type="MarginContainer" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Email" parent="Main/VBoxContainer/HBoxContainer/Content" instance=ExtResource("6")]
layout_mode = 2

[node name="Table" parent="Main/VBoxContainer/HBoxContainer/Content" instance=ExtResource("7")]
visible = false
layout_mode = 2

[node name="Calendar" parent="Main/VBoxContainer/HBoxContainer/Content" instance=ExtResource("3")]
visible = false
layout_mode = 2

[node name="Formation" parent="Main/VBoxContainer/HBoxContainer/Content" instance=ExtResource("5")]
visible = false
layout_mode = 2

[node name="AllPlayerList" parent="Main/VBoxContainer/HBoxContainer/Content" instance=ExtResource("4")]
visible = false
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Calendar" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "CALENDAR"

[node name="Email" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "EMAIL"

[node name="Table" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "TABLE"

[node name="Formation" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "FORMATION"

[node name="SearchPlayer" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "SEARCH_PLAYER"

[node name="Training" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
visible = false
layout_mode = 2
text = "TRAINING"

[node name="Menu" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "MENU"

[node name="NextMatch" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "NEXT_MATCH"

[node name="Continue" type="Button" parent="Main/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "NEXT_DAY"

[node name="PlayerOfferPopup" type="Popup" parent="."]
size = Vector2i(600, 400)

[node name="Panel" type="Panel" parent="PlayerOfferPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerOffer" parent="PlayerOfferPopup" instance=ExtResource("8")]
offset_left = 0.0
offset_right = 0.0

[node name="ContractPopup" type="Popup" parent="."]

[node name="ContractOffer" parent="ContractPopup" instance=ExtResource("9")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="TrainingPopup" type="Popup" parent="."]

[node name="Training" parent="TrainingPopup" instance=ExtResource("10")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[connection signal="offer_contract" from="Main/VBoxContainer/HBoxContainer/Content/Email" to="." method="_on_Email_offer_contract"]
[connection signal="select_player" from="Main/VBoxContainer/HBoxContainer/Content/AllPlayerList" to="." method="_on_AllPlayerList_select_player"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/Calendar" to="." method="_on_Calendar_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/Email" to="." method="_on_Email_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/Table" to="." method="_on_Table_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/Formation" to="." method="_on_Formation_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/SearchPlayer" to="." method="_on_SearchPlayer_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/Training" to="." method="_on_Training_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/NextMatch" to="." method="_on_next_match_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HBoxContainer/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="cancel" from="ContractPopup/ContractOffer" to="." method="_on_ContractOffer_cancel"]
[connection signal="confirm" from="ContractPopup/ContractOffer" to="." method="_on_ContractOffer_confirm"]
